# ToDoPythonCliApp

./: .gitignore  README.md  pyproject.toml  tasks.json
cli/: __init__.py  export.py  main.py  search.py  tasks.py
models/: __init__.py  task.py
tests/: __init__.py  test_cli_tasks.py  test_exporter.py  test_filters.py  test_storage.py  test_task_model.py
utils/: __init__.py  exporters.py  filters.py  storage.py
